@@ -25,19 +25,18 @@ import java.net.URLClassLoader;
 
 public class MCRClassTools {
     public static Object loadClassFromURL(String classPath, String className)
-        throws MalformedURLException, ClassNotFoundException, InstantiationException, IllegalAccessException {
-
+        throws MalformedURLException, ReflectiveOperationException {
         return loadClassFromURL(new File(classPath), className);
     }
 
     public static Object loadClassFromURL(File file, String className)
-        throws MalformedURLException, ClassNotFoundException, InstantiationException, IllegalAccessException {
+        throws MalformedURLException, ReflectiveOperationException {
         if (file.exists()) {
             URL url = file.toURI().toURL();
             URLClassLoader urlClassLoader = new URLClassLoader(new URL[] { url },
                 Thread.currentThread().getContextClassLoader());
             Class<?> clazz = urlClassLoader.loadClass(className);
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         }
 
         return null;
