@@ -26,8 +26,8 @@ import java.nio.channels.SocketChannel;
 public class TestUtil {
     public static <T> T instantiate(final String className, final Class<T> type) {
         try {
-            return type.cast(Class.forName(className).newInstance());
-        } catch (final InstantiationException | ClassNotFoundException | IllegalAccessException e) {
+            return type.cast(Class.forName(className).getDeclaredConstructor().newInstance());
+        } catch (final ReflectiveOperationException e) {
             throw new IllegalStateException(e);
         }
     }
